Wrap the preview to fix its height

--- a/src/Sidebar.module.css
+++ b/src/Sidebar.module.css
@@ -1,6 +1,10 @@
+.PreviewWrapper {
+  height: 30vh;
+}
+
 .Preview {
   width: 100%;
-  height: 40vh;
+  height: 100%;
   margin: auto;
   overflow: hidden;
 }
